<resources>
    <string name="app_name">Examen2B</string>
    <string name="ingresar_padre">Ingresar Paciente</string>
    <string name="editar_padre">Editar Paciente</string>
    <string name="mostrar_padre">Listar Pacientes</string>
    <string name="borrar_padre">Borrar Paciente</string>
    <string name="compartir_padre">Compartir info del Paciente</string>

    <string name="ingresar_hijo">Ingresar Medicamento</string>
    <string name="editar_hijo">Editar Medicamento</string>
    <string name="mostrar_hijo">Listar Medicamentos</string>
    <string name="borrar_hijo">Borrar Medicamento</string>
    <string name="compartir_hijo">Compartir info del Medicamento</string>

    <string name="padre1">Nombre</string>
    <string name="padre2">Apellido</string>
    <string name="padre3">Fecha de Nacimiento</string>
    <string name="padre4">Medicamentos</string>
    <string name="padre5">Estado de seguro</string>
    <string name="padre6">ID PACIENTE</string>

    <string name="hijo1">Dosis mg</string>
    <string name="hijo2">Nombre</string>
    <string name="hijo3">Composicion</string>
    <string name="hijo4">UsadoPara</string>
    <string name="hijo5">Expira</string>
    <string name="hijo6">Numero Pastillas</string>
    <string name="hijo7">Paciente ID</string>
    <string name="hijo8">Medicamento ID</string>


    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tomarFoto">TomarFoto</string>

</resources>
